js/src/tests/test262/built-ins/Error/isError/name.js
assert
.
sameValue
(
Error
.
isError
.
name
'
isError
'
)
;
reportCompare
(
0
0
)
;
